[package]
name = "sgxs-tools"
version = "0.8.6"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
Utilities for working with the SGX stream format.
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "enclave", "sgxs", "sgxs-sign", "sgxs-append"]
categories = ["command-line-utilities"]
edition = "2018"

autobins = true

[lib]
proc-macro = true
path = "src/sgx_detect/proc_macro.rs"

[[bin]]
name = "isgx-pe2sgx"
required-features = ["pe2sgxs", "sgxs"]

[[bin]]
name = "sgxs-load"
required-features = ["sgxs-load"]

[[bin]]
name = "sgx-detect"
path = "src/sgx_detect/main.rs"
required-features = ["sgx-detect"]

[dependencies]
# Project dependencies
"sgxs" = { version = "0.7.0", path = "../sgxs", features = ["crypto-openssl"] }
"sgxs-loaders" = { version = "0.3.0", path = "../sgxs-loaders", optional = true }
"aesm-client" = { version = "0.5.0", path = "../aesm-client", features = ["sgxs"], optional = true }
"sgx-isa" = { version = "0.4.0", path = "../sgx-isa" }
"report-test" = { version = "0.3.1", path = "../report-test", optional = true }
"enclave-runner" = { version = "0.5.0", path = "../enclave-runner", optional = true }

# External dependencies
lazy_static = "1"                                # MIT/Apache-2.0
clap = "2.2.5"                                   # MIT
reqwest = "0.9.19"                               # MIT/Apache-2.0
regex = "1"                                      # MIT/Apache-2.0
num = "0.2"                                      # MIT/Apache-2.0
byteorder = "1.1.0"                              # Unlicense/MIT
openssl = "0.10"                                 # Apache-2.0
failure = "0.1.1"                                # MIT/Apache-2.0
failure_derive = "0.1.1"                         # MIT/Apache-2.0
crypto-hash = "0.3"                              # MIT
broadcast = { version = "0.1", optional = true } # MIT
log = "0.4"                                      # MIT/Apache-2.0
env_logger = "0.6"                               # MIT/Apache-2.0
yansi = "0.5"                                    # MIT/Apache-2.0
atty = "0.2"                                     # MIT
quote = "0.6"                                    # MIT/Apache-2.0
proc-macro2 = "0.4"                              # MIT/Apache-2.0
petgraph = "0.4"                                 # MIT/Apache-2.0
mopa = "0.2"                                     # MIT/Apache-2.0
syn = { version = "0.15", features = ["full"] }  # MIT/Apache-2.0
fnv = "1"                                        # MIT/Apache-2.0
proc-mounts = "0.2.4"                            # MIT
serde = "1.0.84"                                 # MIT/Apache-2.0
serde_derive = "1.0.84"                          # MIT/Apache-2.0
serde_yaml = "0.8.8"                             # MIT/Apache-2.0
pe = { version = "0.1", optional = true }        # GPL

[target.'cfg(unix)'.dependencies]
dcap-ql = { version = "0.3.0", path = "../dcap-ql", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["winbase"] }

[features]
default = ["sgx-detect", "sgxs-load"]
pe2sgxs = ["dep:pe", "dep:broadcast"]
sgx-detect = ["dep:aesm-client", "dep:dcap-ql", "dep:enclave-runner", "dep:report-test", "dep:sgxs-loaders"]
sgxs-load = ["dep:aesm-client", "dep:sgxs-loaders"]
docs = []

[package.metadata.docs.rs]
features = ["docs"]
